deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
  selector:
    app: excalidraw
